fix: arrows size on mobile

--- a/src/components/image-gallery/styles.module.css
+++ b/src/components/image-gallery/styles.module.css
@@ -86,4 +86,9 @@
   .gallery {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .prevButton,
+.nextButton {
+  font-size: 16px;;
+}
 }
